workspaces/diff-engine/src/commands/snapshots/optic_diff_engine__commands__endpoint__test__can_handle_remove_path_component_command__removing_root_result.snap
---
source: workspaces/diff-engine/src/commands/endpoint.rs
expression: removing_root_result.unwrap_err()
---
Validation(
    "Command failed validation: path id must not be root to remove path component, \"RemovePathComponent(RemovePathComponent { path_id: \\\"root\\\" })\"",
)
